# robotic_vision

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
artifacts/manifests/: phase1-benchmark.json
artifacts/reports/: florence2.json  grounding-dino.json  phase1-dry-run.md  phase1-failures.json  phase1-summary-brief.md  phase1-summary.json  phase1-yolo-dry-run.md  yolo11-best-eval.json
config/: phase1.yaml  phase2.yaml
my-project/.specify/: init-options.json
specs/001-phase1-baseline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-yolo-baseline-validation/: data-model.md  plan.md  progress-summary.docx  progress-summary.pptx  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py  export_mixed_yolo_experiments.py  export_yolo_book_oversampled_view.py  export_yolo_view.py  main.py  plan_synthetic_generation.py  prepare_benchmark.py  run_baseline.py  summarize_phase1.py  train_florence2.py  train_mixed_yolo11.py  train_yolo11_book_focus.py  write_isaac_synthetic_script.py
src/config/: __init__.py  phase1_settings.py
src/models/: __init__.py
src/synthetic/: __init__.py  isaac_script.py  models.py  planner.py
src/utils/: hardware.py  paths.py
tests/: conftest.py
tests/integration/: test_export_yolo_view.py  test_prepare_benchmark.py  test_run_baseline.py  test_split_integrity.py  test_summarize_phase1.py
(+62 files in other folders)
